test/cases/compile_errors/stage1/obj/using_an_unknown_len_ptr_type_instead_of_array.zig
const resolutions = [*][*]const u8{
    "[320 240  ]",
    null,
};
comptime {
    _ = resolutions;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:1:21: error: expected array type or [_], found '[*][*]const u8'
